[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1024, -2.01015, 0, 0, 0, 0, 1024, 600.02, 0, 0, 0, 0, -2.00391, 591.993, 0, 0, 0, 0, -2.00391, -2.01015, 0, 0, 0, 0, 1024, -2.01015 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
Mob = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 288 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 288 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 2, 2.00337 )
scale = Vector2( 0.998047, 0.996627 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 1024, -2.01015 )
rotation = 1.57081

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
